[tool.poetry]
name = "password_generator"
version = "0.1.0"
description = ""
authors = ["Denaid24 <Gamabyta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
