[tool.poetry]
name = "password_generator"
version = "0.1.0"
description = ""
authors = ["Denaid24 <Gamabyta@gmail.com>"]
packages = [
  { include = "pass_gen" },
]


[tool.poetry.dependencies]
python = "^3.8"
black = "^22.6.0"
flake8 = "^4.0.1"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = "pass_gen.generator:main"